# Fuva

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HOWTO.md  LICENSE  README.md  docker-compose.yml  fuva.service  publiccode.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __init__.py  config.py  db.py  demo_server.py  export.py  main.py
cli/analyzers/: __init__.py  anomaly_detector.py  response_analyzer.py  validation_comparator.py  waf_detector.py
cli/generators/: __init__.py  archive_generator.py  base.py  document_generator.py  executable_generator.py  extended_generator.py  image_generator.py  mixed_generator.py
cli/reporting/: __init__.py  csv_generator.py  html_generator.py  json_generator.py
cli/utils/: __init__.py  logging.py  platform.py
web/: __init__.py  config.py  guide.html  interpret.html  main.py
web/api/: routes.py
web/services/: runner.py
web/static/css/: style.css
web/templates/: base.html  index.html  report.html
